--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <div class="section">
             <h2>The Importance of Regular Maintenance</h2>
-            <p>Both balancing and alignment are crucial for extending the lifespan of your tires and ensuring optimal performance. Neglecting these services can lead to uneven tire wear, decreased fuel efficiency, and even damage to your suspension system. A routine <b><a href="https://www.google.com/search?kgmid=/g/11dxnz3vm_">Lube, Oil & Filter Change</a></b> combined with a wheel check can prevent these issues.</p>
+            <p>Both balancing and alignment are crucial for extending the lifespan of your tires and ensuring optimal performance. Neglecting these services can lead to uneven tire wear, decreased fuel efficiency, and even damage to your suspension system. A routine <b><a href="https://robrt-parker1.github.io/midtown-auto-pros/">Lube, Oil & Filter Change</a></b> combined with a wheel check can prevent these issues.</p>
         </div>
 
         <div class="section">
